Se agregó el Login y el Logout

--- a/portfolio/templates/layout.html
+++ b/portfolio/templates/layout.html
@@ -25,6 +25,9 @@
 
         {% block projecto_usuario %}
         {% endblock %}
+
+        {% block login%}
+        {% endblock%}
     </div>
     
 </body>
