--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -2,9 +2,10 @@
 
 {% block content %}
     <h1>Mis projectos</h1>
+    <h2>{{mensaje}}</h2>
 
     {% for project in projects %}
-
+    
     <h3>{{project.title}}</h3>
     <p>{{project.description}}</p>
     <img src="{{project.image.url}}" alt="">
