--- a/portfolio/templates/partials/navbar.html
+++ b/portfolio/templates/partials/navbar.html
@@ -22,6 +22,12 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'comentario'%}">Comentarios</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'login'%}">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout'%}">Logout</a>
+          </li>
           
           
         </ul>
