Se agrego los registros de usurios

--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-    <h1>Mis projectos</h1>
+    <h1>Inicio</h1>
     <h2>{{mensaje}}</h2>
 
     {% for project in projects %}
