--- a/portfolio/templates/layout.html
+++ b/portfolio/templates/layout.html
@@ -28,6 +28,9 @@
 
         {% block login%}
         {% endblock%}
+
+        {% block register %}
+        {% endblock%}
     </div>
     
 </body>
