--- a/portfolio/templates/partials/navbar.html
+++ b/portfolio/templates/partials/navbar.html
@@ -19,14 +19,17 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'projecto_usuario'%}">Projectos de la Comunidad</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="{% url 'comentario'%}">Comentarios</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="{% url 'login'%}">Login</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'logout'%}">Logout</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'register'%}">Registrar</a>
           </li>
           
           
