--- a/portfolio/templates/partials/navbar.html
+++ b/portfolio/templates/partials/navbar.html
@@ -31,6 +31,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'register'%}">Registrar</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'edit'%}">Editar user</a>
+          </li>
           
           
         </ul>
