Se agregaron cambios en los avatares

--- a/portfolio/templates/layout.html
+++ b/portfolio/templates/layout.html
@@ -36,7 +36,7 @@
                 
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'edit'%}">
-                    <img src="{{user_avatar}}" alt="Editar imagen" height="30" >
+                    <img src="{{user_avatar}}" alt="Editar" height="30" >
                   </a>
                 </li>
                 <li class="nav-item">
