--- a/accounts/templates/edit_user.html
+++ b/accounts/templates/edit_user.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block register %}
-<form action="" method="post">
+<form action="" method="post" enctype="multipart/form-data">
     <h2>Editar user</h2>
     {% csrf_token %}
 
