--- a/portfolio/templates/layout.html
+++ b/portfolio/templates/layout.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Django Portafolio</title>
 </head>
-<body>
+<body style=background-color:light blue>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
           <a class="navbar-brand" href="/">Portafolio</a>
@@ -19,6 +19,9 @@
               
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'blog:posts'%}">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'about'%}">Acerca de mí</a>
               </li>
               <!-- <li class="nav-item">
                 <a class="nav-link" href="{% url 'blog:formulario_post'%}">Crear Post</a>
@@ -34,8 +37,7 @@
               </li> -->
               {% if request.user.is_authenticated %}
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'profile'%}">
-                    <img src="{{user_avatar}}" alt="Usuario" height="30" >
+                  <a class="nav-link" href="{% url 'profile'%}"><img src="{{request.user.useravatar.avatar.url}}" alt="{{request.user.username}}" height="30" >
                   </a>
                 </li>
                 <li class="nav-item">
@@ -81,7 +83,6 @@
 
         {% block profile %}
         {% endblock %}
-    </div>
-    
+  
 </body>
 </html>
