Se agregaron clases basadas en vistas

--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -11,7 +11,7 @@
 {% endif %}
 <h5>Link de mi pagina: {{request.user.useravatar.link}}</h5>
 
-    <a href={% url 'edit' %}> Editar perfil</a>
+    <a href="{% url 'edit' %}"> Editar perfil</a>
 
 <p></p>
 
