--- a/blog/templates/blog_detalle.html
+++ b/blog/templates/blog_detalle.html
@@ -13,7 +13,7 @@
     {% if post.imagen %}
     <p><img src="{{post.imagen.url}}" alt="Imagen" height="300"></p>
     {% endif %}
-    <p><a href="{% url 'blog:update' post.id%}">Editar articulo</a> | <a href="{% url 'blog:delete' post.id%}">Borrar articulo</a></p>
+    <p><a href="{% url 'blog:editar_blog' post.id%}">Editar articulo</a> | <a href="{% url 'blog:borrar_blog' post.id%}">Borrar articulo</a></p>
     <p></p>
 
 
