--- a/accounts/templates/edit_user.html
+++ b/accounts/templates/edit_user.html
@@ -5,7 +5,7 @@
     {% csrf_token %}
 
     <table>
-
+    {{form.media}}
     {{form.as_table}}
     </table>
     <input type="submit" value="Guardar">
